oxiplate-derive/tests/broken/derive/only-extension.stderr
error: Failed to parse inline template. Should look something like:
       #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/derive/only-extension.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `:`
 --> tests/broken/derive/only-extension.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
